syntax = "proto3";

package products;

option go_package = "github.com/commerce-app-demo/product-service/proto;productspb";

service ProductService {
    rpc GetProducts(Empty) returns (ProductArray);
    rpc GetProduct(GetProductRequest) returns (Product);
    rpc CreateProduct(CreateProductRequest) returns (Product);
}

message Empty {}

message GetProductRequest {
    string id = 1;
}

message CreateProductRequest {
    string name = 1;
    double price = 2;
}

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
}

message ProductArray {
    repeated Product products = 1;
}